--- a/scripts/Development/JupyterNotebooks/HachSodium.ipynb
+++ b/scripts/Development/JupyterNotebooks/HachSodium.ipynb
@@ -106,7 +106,7 @@
     "    importDest='//mxns.loc//shares//NA-Instruments//Prod//'+eachlab+'//impf//'\n",
     "    print(path)\n",
     "    if os.path.exists(path):\n",
-    "        break\n",
+    "        pass\n",
     "    else:\n",
     "        os.makedirs(path)\n",
     "    files = os.listdir(path)\n",
