--- a/scripts/Development/JupyterNotebooks/VIDAS - Parser LS.ipynb
+++ b/scripts/Development/JupyterNotebooks/VIDAS - Parser LS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,10 +10,20 @@
     "import os\n",
     "import fnmatch\n",
     "import numpy as np\n",
-    "import json\n",
     "from datetime import datetime\n",
-    "basePath='//mxns.loc//shares//NA-Instruments//VIDAS//VIDAS_LIMS//'\n",
-    "colsOrder=['Sample.Sample_Number', 'Test.Analysis','Result.Name', 'Result.Entry', 'Result.Entered_By','Result.Instrument']"
+    "import time\n",
+    "import csv\n",
+    "import sys\n",
+    "import sqlalchemy as sql\n",
+    "basePath = '//mxns.loc//shares//NA-Instruments//VIDAS//VIDAS_LIMS//'\n",
+    "#colsOrder = ['Sample.Sample_Number', 'Test.Analysis', 'Test.Replicate_Count','Result.Name', 'Result.Entry', 'Result.Entered_By']\n",
+    "colsOrder = ['Sample.Sample_Number', 'Test.Test_Number', 'Result.Name', 'Result.Entry', 'Result.Entered_By']\n",
+    "dbHost='mxnunx41'\n",
+    "dbPort='1521'\n",
+    "dbUser='lims'\n",
+    "dbPassword='Mumwit63'\n",
+    "dbName='hwi1'\n",
+    "dburl='oracle://'"
    ]
   },
   {
@@ -22,12 +32,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#function to generate the result name\n",
-    "def generateResultname(testIdentifier,variable):\n",
-    "    if(variable=='R2'):\n",
+    "# function to generate the result name\n",
+    "def generateResultname(testIdentifier, variable):\n",
+    "    if (variable == 'R2'):\n",
     "        return str(testIdentifier)\n",
     "    else:\n",
-    "        return str('OD'+str(testIdentifier))"
+    "        return str('OD' + str(testIdentifier))"
    ]
   },
   {
@@ -36,12 +46,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fucntion to Create a folder if it dosen't exsist.\n",
+    "# function to generate the result name\n",
+    "def generateResult(value):\n",
+    "    print(value)\n",
+    "    if value in ('ABSENT','NEGATIVE'):\n",
+    "        return str('NEGATIVE')\n",
+    "    elif value in ('INVALID','Invalid'):\n",
+    "        invalidFlag=1\n",
+    "        return str('INVALID')\n",
+    "    else:\n",
+    "        return str('SUSPECT')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to generate the result name\n",
+    "def generateReplicateCnt(value):\n",
+    "    retVal= ord(value) - 64\n",
+    "    return  retVal\n",
+    "\n",
+    "# fucntion to Create a folder if it dosen't exsist.\n",
     "def createFolderIfNotExsist(folderPath):\n",
     "    if os.path.exists(folderPath):\n",
     "        pass\n",
     "    else:\n",
-    "        os.makedirs(folderPath)"
+    "        os.makedirs(folderPath)\n",
+    "        print('Folder Created:' + folderPath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getTestNumberfromDb(sampleNumber,analysisCode):\n",
+    "    dburl = 'oracle://'+dbUser+':'+dbPassword+'@'+dbHost+':'+dbPort+'/'+dbName\n",
+    "    engine=sql.create_engine(dburl)\n",
+    "    resultdf=pd.DataFrame()\n",
+    "    queryText=\"SELECT DISTINCT T.TEST_NUMBER FROM TEST T , ANALYSIS A, COMPONENT C WHERE T.ANALYSIS=A.NAME AND a.NAME=c.ANALYSIS\"\n",
+    "    queryText=queryText+\" AND a.ALIAS_NAME='VIDAS'AND t.SAMPLE_NUMBER='\"+str(sampleNumber)+\"'AND c.ALIAS_NAME='\"+str(analysisCode)+\"'\"\n",
+    "    conn = engine.connect()\n",
+    "    retTestNumber = conn.execute(queryText).fetchone()[0]\n",
+    "    conn.close()\n",
+    "    return retTestNumber"
    ]
   },
   {
@@ -50,9 +102,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Moce to ARK folder\n",
-    "def moveFiletoArkFolder(arkPath,sourcePath,fname):\n",
-    "    arkDest = arkPath + fname[:-4] + '.bak' #Backup the processed file\n",
+    "# Move to file to  folder\n",
+    "def moveFiletoFolder(arkPath, sourcePath, fname):\n",
+    "    # checking the exsitnace of Archive directory and path\n",
+    "    createFolderIfNotExsist(arkPath)\n",
+    "    print(\"Source for moving\" + sourcePath)\n",
+    "    print(\"dest for moving\" + arkPath)\n",
+    "    arkDest = arkPath + fname[:-4] + '.bak'  # Backup the processed file\n",
     "    os.rename(sourcePath, arkDest)\n",
     "    time.sleep(1)"
    ]
@@ -63,12 +119,118 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#write the file\n",
-    "def writeFile(dframe,lab,instName,arkPath,basePath,sourcePath):\n",
+    "# write the file to importer folder\n",
+    "def writeFile(dframe, lab, instName, basePath):\n",
     "    timestr = time.strftime(\"%Y%m%d%H%M%S\")\n",
-    "    importerFilePath = basePath + lab+'_IMPORTER//'+instName+'_' + timestr + '.csv'\n",
-    "    dframe.to_csv(importerFilePath, index=False, encoding=\"utf-8\",quotechar='\"',quoting=csv.QUOTE_NONNUMERIC) # write  out the file to be imported\n",
+    "    fname = instName + '_' + timestr + '.csv'\n",
+    "    importerPath = basePath + lab + '_IMPORTER//'\n",
+    "    createFolderIfNotExsist(importerPath)\n",
+    "    importerFilePath = importerPath + fname\n",
+    "    dframe.to_csv(importerFilePath, index=False, encoding=\"utf-8\", quotechar='\"',\n",
+    "                  quoting=csv.QUOTE_NONNUMERIC)  # write  out the file to be imported\n",
+    "    print('Importer File Generated' + fname)\n",
     "    time.sleep(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def GenerateImporterFile(raw_data,instName,basePath):\n",
+    "    raw_data['specimenIdentifier'] = raw_data[0]\n",
+    "    raw_data['testIdentifier'] = raw_data[1]\n",
+    "    raw_data['R1'] = raw_data[5]\n",
+    "    raw_data['Rtext'] = raw_data[2]\n",
+    "    raw_data['R2'] = raw_data.apply(lambda x: generateResult(x.Rtext), axis=1)\n",
+    "    print(\"Invalid:\"+ str(invalidFlag))\n",
+    "    if(invalidFlag==1):\n",
+    "        return\n",
+    "    raw_data['patientIdentifier'] = raw_data[4]\n",
+    "    raw_data = raw_data[np.isfinite(raw_data[\"patientIdentifier\"])]\n",
+    "    raw_data['patientIdentifier'] = raw_data['patientIdentifier'].astype(int)\n",
+    "    raw_data[\"samplenumber\"] = raw_data[\"patientIdentifier\"].map(str) + raw_data[\"specimenIdentifier\"].str[-6:]\n",
+    "    raw_data[\"replicateStr\"] = raw_data[\"specimenIdentifier\"].str[-7:-6]\n",
+    "    raw_data[\"replicatecnt\"] = raw_data.apply(lambda x: generateReplicateCnt(x.replicateStr), axis=1)\n",
+    "    sampleNumber=raw_data.iloc[0]['samplenumber']\n",
+    "    analysisCode=raw_data.iloc[0]['Rtext']\n",
+    "    raw_data[\"testNumber\"] = getTestNumberfromDb(sampleNumber,analysisCode)\n",
+    "    dfResult = pd.melt(raw_data,\n",
+    "                       id_vars=['instrumentName', 'specimenIdentifier', 'testIdentifier', 'samplenumber',\n",
+    "                                'replicatecnt'],\n",
+    "                       value_vars=['R1', 'R2'])\n",
+    "    dfResult['Result.Name'] = dfResult.apply(lambda x: generateResultname(x.testIdentifier, x.variable), axis=1)\n",
+    "    dfResult['Test.Analysis'] = 'VIDAS'\n",
+    "    dfResult['Result.Entered_By'] = 'VIDASBCI'\n",
+    "    dfResult = dfResult.rename(index=str,\n",
+    "                               columns={'samplenumber': 'Sample.Sample_Number', 'value': 'Result.Entry',\n",
+    "                                        'replicatecnt': 'Test.Replicate_Count', 'testNumber':'Test.Test_Number',\n",
+    "                                        'instrumentName': 'Result.Instrument'})\n",
+    "    dfResult = dfResult.astype({\"Sample.Sample_Number\": int})\n",
+    "    dfResult = dfResult.sort_values(by=['Sample.Sample_Number', 'Result.Name'])\n",
+    "    dfResult = dfResult[colsOrder]\n",
+    "    #writeFile(dfResult, lab, instName, basePath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to Process Each Lab seperately\n",
+    "def processEachLabFiles(lab, labcount, labImporterPath, basePath):\n",
+    "    print('Process started for ' + lab)\n",
+    "    fileCounter = 0\n",
+    "    #createFolderIfNotExsist(labImporterPath)\n",
+    "    li = []\n",
+    "    fileStatusFlag = False\n",
+    "    for each in range(1, labcount + 1):\n",
+    "        instName = lab + 'VIDAS' + str(each)\n",
+    "        sourceFolderPath = basePath + instName + '//'\n",
+    "        arkFolderPath = sourceFolderPath + 'Archive//' + datetime.now().strftime('%Y') + '//' + datetime.now().strftime(\n",
+    "            '%m_%d') + '//'\n",
+    "        # checking the exsitnace of importer path\n",
+    "        errorFolderPath = sourceFolderPath + 'Error//' + datetime.now().strftime('%Y') + '//' + datetime.now().strftime(\n",
+    "            '%m_%d') + '//'\n",
+    "        createFolderIfNotExsist(sourceFolderPath)\n",
+    "        files = os.listdir(sourceFolderPath)\n",
+    "        for filename in files:\n",
+    "            if fnmatch.fnmatch(filename, '*.CSV'):\n",
+    "                print('Processing Files for :' + lab)\n",
+    "                sourcefilePath = sourceFolderPath + str(filename)\n",
+    "                try:\n",
+    "                    rawdf = pd.read_csv(sourcefilePath, index_col=None, header=None)\n",
+    "                    rawdf['instrumentName'] = instName\n",
+    "                    #li.append(rawdf)\n",
+    "                    print('Processed :' + filename)\n",
+    "                    # Moving to Archive Folder\n",
+    "                    fileStatusFlag = True\n",
+    "                    fileCounter = fileCounter + 1\n",
+    "                    GenerateImporterFile(rawdf, instName, basePath)\n",
+    "                    if(invalidFlag==1):\n",
+    "                        moveFiletoFolder(errorFolderPath, sourcefilePath, filename)\n",
+    "                    else:\n",
+    "                        moveFiletoFolder(arkFolderPath, sourcefilePath, filename)\n",
+    "                    continue\n",
+    "                except:\n",
+    "                    #Moving to Error Folder\n",
+    "                    moveFiletoFolder(errorFolderPath, sourcefilePath, filename)\n",
+    "                    invalidFlag = 0\n",
+    "                    continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lab = sys.argv[1]\n",
+    "labcount = int(sys.argv[2])\n",
+    "labImporterPath = \"\"\n",
+    "processEachLabFiles(lab, labcount, labImporterPath, basePath)"
    ]
   },
   {
@@ -77,73 +239,208 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('.\\configFiles\\VIDASParserConfig.json', 'r') as f:\n",
-    "    config = json.loads(f)\n",
-    "    for d1 in config:\n",
-    "        lab=d1\n",
-    "        labcount=int(config[d1]['count'])\n",
-    "        labImporterPath=config[d1]['importerPath']"
+    "t=getTestNumberfromDb(\"396409661\",\"SLM\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "666961566"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "createFolderIfNotExsist(labImporterPath)\n",
-    "li = []\n",
-    "print('Processing Files for :'+lab)\n",
-    "for each in range(1,labcount+1):\n",
-    "    instName=lab+'VIDAS'+str(each)\n",
-    "    sourceFolderPath=basePath+instName+'//'\n",
-    "    arkFolderPath=sourceFolderPath+'Archive//'+datetime.now().strftime('%Y')+'//'+datetime.now().strftime('%m_%d')+'//'\n",
-    "    #checking the exsitnace of importer path\n",
-    "    createFolderIfNotExsist(sourceFolderPath)\n",
-    "    #checking the exsitnace of Archive directory and path\n",
-    "    createFolderIfNotExsist(arkFolderPath)\n",
-    "    files = os.listdir(sourceFolderPath)\n",
-    "    for filename in files:\n",
-    "        if fnmatch.fnmatch(filename,'*.CSV'):\n",
-    "            filePath = sourceFolderPath + str(filename)\n",
-    "            try:\n",
-    "                rawdf = pd.read_csv(filePath,index_col=None,header=None)\n",
-    "                rawdf['instrumentName']=instName\n",
-    "                li.append(rawdf)\n",
-    "                print('Processed :'+filename)\n",
-    "                moveFiletoArkFolder(arkFolderPath,sourceFolderPath,filename)\n",
-    "            except:\n",
-    "                continue\n",
-    "raw_data = pd.concat(li, axis=0, ignore_index=True)\n",
-    "raw_data['specimenIdentifier'] =raw_data[0]\n",
-    "raw_data['testIdentifier'] =raw_data[1]\n",
-    "raw_data['R1'] =raw_data[5]\n",
-    "raw_data['R2'] =raw_data[2]\n",
-    "raw_data['patientIdentifier'] = raw_data[4]\n",
-    "raw_data = raw_data[np.isfinite(raw_data[\"patientIdentifier\"])]\n",
-    "raw_data['patientIdentifier']=raw_data['patientIdentifier'].astype(int)\n",
-    "raw_data[\"samplenumber\"] = raw_data[\"patientIdentifier\"].map(str) + raw_data[\"specimenIdentifier\"].str[-6:]\n",
-    "dfResult = pd.melt(raw_data, \n",
-    "                   id_vars=['instrumentName','specimenIdentifier','testIdentifier','samplenumber'], value_vars=['R1', 'R2'])\n",
-    "dfResult['Result.Name'] = dfResult.apply(lambda x: generateResultname(x.testIdentifier,x.variable),axis=1)\n",
-    "dfResult = dfResult.sort_values(by=['samplenumber'])\n",
-    "dfResult['Test.Analysis'] = 'VIDAS'\n",
-    "dfResult['Result.Entered_By'] = lab+'_VIDAS_IMPORTER'\n",
-    "dfResult = dfResult.rename(index=str,\n",
-    "columns={'samplenumber': 'Sample.Sample_Number', 'value': 'Result.Entry','instrumentName':'Result.Instrument'})\n",
-    "dfResult=dfResult[colsOrder]\n",
-    "#Writes the File to the  ARK, Importer Folders\n",
-    "writeFile(dfResult,lab,instName,arkFolderPath,basePath,sourceFolderPath)"
+    "t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def processEachLabFiles(lab,labcount,labImporterPath,basePath):"
+    "sourcefilePath= \"C:\\GitHub\\Instrument-Interface\\scripts\\Development\\JupyterNotebooks\\SampleFiles_Instruments\\VIDAS\\GRAVIDAS3_200131_211021_2.csv\"\n",
+    "rawdf = pd.read_csv(sourcefilePath, index_col=None, header=None)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>hcaA260308</td>\n",
+       "      <td>SLM</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>396</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            0    1   2  3    4   5\n",
+       "0  hcaA260308  SLM NaN  1  396 NaN"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rawdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t=rawdf[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0   NaN\n",
+       "Name: 2, dtype: float64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rawdf = rawdf.fillna(\"N/A\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>hcaA260308</td>\n",
+       "      <td>SLM</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>396</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            0    1    2  3    4    5\n",
+       "0  hcaA260308  SLM  N/A  1  396  N/A"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rawdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
